1st section responsive

--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
 
     </div>
   </header>
+  <main>
+    <section class="section-01">
+      <div class="img">
+        <img src="images/sponsors/team1.png" alt="">
+        <img src="images/sponsors/team2.png" alt="">
+        <img src="images/sponsors/team3.png" alt="">
+        <img src="images/sponsors/team4.png" alt="">
+      </div>
+      <div class="section-01-box">
+        <h1 class="section-01-headline">Quick list <strong>of Our <span>Features</span></strong></h1>
+        <p class="section-01-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in
+          some form,
+          by injected humour, or randomised words which don't look even</p>
+        <button class="btn">Explore More</button>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
